bloodc/src/parser/snapshots/bloodc__parser__tests__struct_update.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Record {
                                    path: Some(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 2,
                                                        },
                                                        span: Span {
                                                            start: 9,
                                                            end: 14,
                                                            start_line: 1,
                                                            start_col: 10,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 9,
                                                end: 14,
                                                start_line: 1,
                                                start_col: 10,
                                            },
                                        },
                                    ),
                                    fields: [
                                        RecordExprField {
                                            name: Spanned {
                                                node: SymbolU32 {
                                                    value: 3,
                                                },
                                                span: Span {
                                                    start: 17,
                                                    end: 18,
                                                    start_line: 1,
                                                    start_col: 18,
                                                },
                                            },
                                            value: Some(
                                                Expr {
                                                    kind: Literal(
                                                        Literal {
                                                            kind: Int {
                                                                value: 10,
                                                                suffix: None,
                                                            },
                                                            span: Span {
                                                                start: 20,
                                                                end: 22,
                                                                start_line: 1,
                                                                start_col: 21,
                                                            },
                                                        },
                                                    ),
                                                    span: Span {
                                                        start: 20,
                                                        end: 22,
                                                        start_line: 1,
                                                        start_col: 21,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 17,
                                                end: 22,
                                                start_line: 1,
                                                start_col: 18,
                                            },
                                        },
                                    ],
                                    base: Some(
                                        Expr {
                                            kind: Path(
                                                ExprPath {
                                                    segments: [
                                                        ExprPathSegment {
                                                            name: Spanned {
                                                                node: SymbolU32 {
                                                                    value: 4,
                                                                },
                                                                span: Span {
                                                                    start: 26,
                                                                    end: 33,
                                                                    start_line: 1,
                                                                    start_col: 27,
                                                                },
                                                            },
                                                            args: None,
                                                        },
                                                    ],
                                                    span: Span {
                                                        start: 26,
                                                        end: 33,
                                                        start_line: 1,
                                                        start_col: 27,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                start: 26,
                                                end: 33,
                                                start_line: 1,
                                                start_col: 27,
                                            },
                                        },
                                    ),
                                },
                                span: Span {
                                    start: 9,
                                    end: 35,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 37,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 37,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 37,
        start_line: 1,
        start_col: 1,
    },
}
