bloodc/src/parser/snapshots/bloodc__parser__tests__trait_associated_type.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected `=`, found `;`", span: Span { start: 31, end: 32, start_line: 3, start_col: 14 }, labels: [], suggestions: [], source_file: None, source_content: None }]
