bloodc/src/parser/snapshots/bloodc__parser__tests__trait_declaration.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected `:`, found keyword `self`", span: Span { start: 33, end: 37, start_line: 3, start_col: 15 }, labels: [], suggestions: [] }]
