bloodc/src/parser/snapshots/bloodc__parser__tests__trait_impl.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected `:`, found keyword `self`", span: Span { start: 42, end: 46, start_line: 3, start_col: 15 }, labels: [], suggestions: [] }, Diagnostic { kind: Error, code: Some("E0100"), message: "expected `fn`, `struct`, `enum`, `trait`, `impl`, `effect`, `handler`, `type`, `const`, or `static`, found `}`", span: Span { start: 81, end: 82, start_line: 6, start_col: 1 }, labels: [], suggestions: [] }]
