bloodc/src/parser/snapshots/bloodc__parser__tests__trait_with_default.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected `:`, found keyword `self`", span: Span { start: 29, end: 33, start_line: 3, start_col: 15 }, labels: [], suggestions: [] }, Diagnostic { kind: Error, code: Some("E0101"), message: "expected `}`, found end of file", span: Span { start: 83, end: 83, start_line: 0, start_col: 0 }, labels: [], suggestions: [] }]
