bloodc/src/parser/snapshots/bloodc__parser__tests__type_alias_simple.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Type(
            TypeDecl {
                attrs: [],
                vis: Private,
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 5,
                        end: 10,
                        start_line: 1,
                        start_col: 6,
                    },
                },
                type_params: None,
                ty: Type {
                    kind: Path(
                        TypePath {
                            segments: [
                                TypePathSegment {
                                    name: Spanned {
                                        node: SymbolU32 {
                                            value: 2,
                                        },
                                        span: Span {
                                            start: 13,
                                            end: 16,
                                            start_line: 1,
                                            start_col: 14,
                                        },
                                    },
                                    args: None,
                                },
                            ],
                            span: Span {
                                start: 13,
                                end: 16,
                                start_line: 1,
                                start_col: 14,
                            },
                        },
                    ),
                    span: Span {
                        start: 13,
                        end: 16,
                        start_line: 1,
                        start_col: 14,
                    },
                },
                span: Span {
                    start: 0,
                    end: 17,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 17,
        start_line: 1,
        start_col: 1,
    },
}
