bloodc/src/parser/snapshots/bloodc__parser__tests__unexpected_token.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected literal, identifier, `(`, `[`, `{`, `if`, or `match`, found `+`", span: Span { start: 9, end: 10, start_line: 1, start_col: 10 }, labels: [], suggestions: [] }]
